--- a/template/citation.html
+++ b/template/citation.html
@@ -1,5 +1,5 @@
 <span id=":citation_id">
 	&#xAB;&nbsp;:citation_contenu&nbsp;&#xBB;
 	<br />
-	<a href="./source_:source_id.html">:source_nom</a> - <a href="./auteur_:auteur_id.html"><b>:auteur_prenom :auteur_nom </b></a> 
+	<a href="./source_:source_id.html">:source_nom</a> - <a href="./auteur_:auteur_id.html"><b>:auteur_titre :auteur_prenom :auteur_nom</b></a> 
 </span>
