--- a/template/indexToRepeat.html
+++ b/template/indexToRepeat.html
@@ -3,6 +3,6 @@
 		&#xAB;&nbsp;:citation_contenu&nbsp;&#xBB;
 	</a>
 	<br />
-	<a href="./source_:source_id.html">:source_nom</a> - <a href="./auteur_:auteur_id.html"><b>:auteur_prenom :auteur_nom </b></a>
+	<a href="./source_:source_id.html">:source_nom</a> - <a href="./auteur_:auteur_id.html"><b>:auteur_titre :auteur_prenom :auteur_nom </b></a>
 </span>
 <hr/>
