--- a/template/sourceRepeat.html
+++ b/template/sourceRepeat.html
@@ -1,4 +1,4 @@
 <span id=":source_id">
-	<a href="./source_:source_id.html">:source_nom</a>
+	<a href="./:source_slug.html">:source_nom</a>
 </span>
 <hr/>
