--- a/template/citationRepeatIndex.html
+++ b/template/citationRepeatIndex.html
@@ -1,8 +1,8 @@
 <span id=":citation_id">
-	<a href="./citation_:citation_id.html">
+	<a href="./:citation_slug.html">
 		&#xAB;&nbsp;:citation_contenu&nbsp;&#xBB;
 	</a>
 	<br />
-	<a href="./source_:source_id.html">:source_nom</a> - <a href="./auteur_:auteur_id.html"><b>:auteur_titre :auteur_prenom :auteur_nom </b></a>
+	<a href="./:source_slug.html">:source_nom</a> - <a href="./:auteur_slug.html"><b>:auteur_titre :auteur_prenom :auteur_nom </b></a>
 </span>
 <hr/>
