--- a/template/citationRepeatSource.html
+++ b/template/citationRepeatSource.html
@@ -1,5 +1,5 @@
 <span id=":citation_id">
-	<a href="./citation_:citation_id.html">
+	<a href="./:citation_slug.html">
 		&#xAB;&nbsp;:citation_contenu&nbsp;&#xBB;
 	</a>
 </span>
