--- a/template/source.html
+++ b/template/source.html
@@ -1,4 +1,4 @@
 <span id=":id">
-	<b>:source_nom</b> :source_date - <a href="./auteur_:auteur_id.html">:auteur_titre :auteur_prenom :auteur_nom </a>
+	<b>:source_nom</b> :source_date - <a href="./:auteur_slug.html">:auteur_titre :auteur_prenom :auteur_nom </a>
 </span>
 <h2>Citations :</h2>
